modified event websocket on close

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
     </div>
     <!-- <input type="text" ng-model="name">
     <h3>hello {{name}}!</h3> -->
-    <div class="d-flex justify-content-center" id="piechart"></div>
+    <div class="row h-100 justify-content-center align-items-center" id="piechart"></div>
 
     <script>
         var app = angular.module('myApp', []);
